# THSR-Ticket

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  TODO.md  check_booking_methods.py  config.yaml  health_check.py  hourly_booking.py  inspect_form.py  list_models.py  main.py  parameter_reference.md  pyproject.toml  query_trains.py  reservations.json  test_captcha.py  tobuy.json  verify_seat_refactor.py
.github/workflows/: booking.yml  daily-booking.yml  pythonpackage.yml
docs/: ARCHITECTURE.md  PROGRESS.md  parameter_reference.md
thsr_ticket/: main.py
thsr_ticket/configs/: config_schema.py
thsr_ticket/configs/web/: enums.py  http_config.py  param_schema.py
thsr_ticket/controller/: booking_flow.py  buyer.py  confirm_ticket_flow.py  confirm_train_flow.py  first_page_flow.py  manager.py  planner.py  search_train_flow.py
thsr_ticket/ml/: generate_captcha.py
thsr_ticket/model/: db.py
thsr_ticket/remote/: captcha_solver.py  http_request.py  notification.py
thsr_ticket/unittest/: test_dynamic_form.py  test_rolling_flow.py
thsr_ticket/unittest/model/: test_booking_form.py  test_confirm_ticket.py
thsr_ticket/view_model/: avail_trains.py  error_feedback.py
