[project]
name = "thsr-ticket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.8.2",
    "flake8>=3.7.9",
    "jsonschema>=3.0.1",
    "mypy>=0.76",
    "pillow>=7.0",
    "pydantic<2.0",
    "pylint>=2.4.4",
    "pytest>=5.3.5",
    "requests>=2.21",
    "tinydb>=3.15.2",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]
