[project]
name = "thsr-ticket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.8.2",
    "curl-cffi>=0.15.0",
    "flake8>=3.7.9",
    "google-generativeai>=0.8.6",
    "jsonschema>=3.0.1",
    "mypy>=0.76",
    "pillow>=7.0",
    "pydantic<2.0",
    "pylint>=2.4.4",
    "pytest>=5.3.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.21",
    "tinydb>=3.15.2",
]

[project.optional-dependencies]
ocr = [
    "ddddocr==1.4.11",  # Use stable version (1.6.0 has import issues)
    "onnxruntime<1.20.0; platform_machine == 'x86_64'",  # Use older version for Intel Mac
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]
